--- a/steins_gate_0/docs/0044.md
+++ b/steins_gate_0/docs/0044.md
@@ -55,8 +55,8 @@ APP升级结束后，『Amadeus』一直启动着。
 “那么，和我要说什么？”  
 我会来到这里，是因为真帆说“有话要说”。就我个人而言，在办公室说也没关系，但是真帆坚持主张要到酒店房间两个人单独谈。倒是完全不担心会有什么不轨的企图，真帆不是那样的人。相处了将近半年，这一点我是明白的。  
 “……”  
-真帆看起来难以启齿。
-“还没有听你说过……
+真帆看起来难以启齿。  
+“还没有听你说过……  
 &emsp;&emsp; 关于红莉栖事件的……真相……”  
 “啊…！”  
 我立刻关掉了『Amadeus』的APP。  
@@ -65,9 +65,9 @@ APP升级结束后，『Amadeus』一直启动着。
 “红莉栖与中钵论文有关，这么说的是你哦。  
 &emsp;&emsp; 呐……那孩子她……真的和时间机器……？”  
 “……”  
-我该怎样回答呢？
+我该怎样回答呢？  
 半年前，真帆曾经试图破解红莉栖的笔记本电脑和硬盘。为了阻止她，我也考虑过在合适的时机把经历过的事说出来。结果，因为各种情况，错失了那个机会。可是现在不一样。红莉栖的笔记本电脑和硬盘已经不存在了，事到如今不该再把这事翻出来。  
-但是，这时真帆说出了让我意想不到的话。  
+但这时,真帆说出了让我意想不到的话。  
 “其实，这半年来，我在研究原本的课题同时，也在一直研究着时间机器。”  
 “……你说什么？”  
 “如果红莉栖做到了，那么我也……我是这么认为的。  
@@ -77,7 +77,7 @@ APP升级结束后，『Amadeus』一直启动着。
 “快停下！！”  
 “……！”  
 这是最坏的情况……  
-事到如今又要折返回去？
+事到如今又要折返回去？  
 不止如此，真帆对红莉栖的执着不比我少。  
 “不要想这些蠢事！”  
 “……冈部先生？”  
