--- a/steins_gate_0/docs/0002.md
+++ b/steins_gate_0/docs/0002.md
@@ -183,7 +183,7 @@
 真帆（同传）：“唉……真棒！他还真是个了不起的家伙！……这般。”  
 比屋定真帆不知道是无奈还是欣慰的长出了一口气，然后特意面朝我翻译了教授的话。  
 真帆（同传）：“只是身为科研人员必须时刻保持冷静。  
-&emsp;&emsp; 能够大声嘶喊的时候，就只有试验成功的时候——  
+&emsp;&emsp; 能够大喊大叫的，就只有试验成功的时候——  
 &emsp;&emsp; ‘我们做到了！’  
 &emsp;&emsp; 只要这句话就足够了。……这样子哦。”  
 “对，对不起……”  
