--- a/steins_gate_0/docs/0002.md
+++ b/steins_gate_0/docs/0002.md
@@ -185,9 +185,9 @@
 真帆（同传）：“只是身为科研人员必须时刻保持冷静。  
 &emsp;&emsp; 能够大喊大叫的，就只有试验成功的时候——  
 &emsp;&emsp; ‘我们做到了！’  
-&emsp;&emsp; 只要这句话就足够了。……这样子哦。”  
+&emsp;&emsp; 只要这句话就足够了——这样子哦。”  
 “对，对不起……”  
-我连忙低下头，坐到椅子上。  
+我连忙低下头，坐到椅子上。  a
 本来以为现在的自己很冷静，果然还是气血上涌了。相比半年前毫无成长。如果红莉栖还在的话，我又会被她狠狠的嘲讽了吧。周围听众投来冰冷的视线让我好痛苦，如果可以的话真想现在就退场。但是因为很在意雷斯吉宁教授接下来的话，就没能动弹。  
 真帆（同传）：“嗯，那么各位，差不多该继续了。  
 &emsp;&emsp; 不过在此之前，让我们先为那位勇敢的人鼓掌吧！”  
