--- a/steins_gate_0/docs/0011.md
+++ b/steins_gate_0/docs/0011.md
@@ -1,29 +1,29 @@
 > <big> **闭时曲线的碑文 - 06** </big>  
 > 1.129848  
-> [ 2010/12/04 吹雪视角 ] 真由理和她的cosplay伙伴三人；吹雪的噩梦。  
+> [ 2010/12/04 吹雪视角 ] 真由理和她的Cosplay伙伴三人；吹雪的噩梦。  
 
-到了12月，天空变暗的时间越来越早。在cosplay店中选择商品的时候，外面的景色已经踏入了夜晚。中濑克美感到惊讶。拉着的拉杆箱传来沉甸甸的感觉。今天买的东西全都塞了进去，箱子都很明显地涨了起来。尽管如此，能够和因为cosplay而互相认识的朋友们一起买东西，假期过得很充实。爽快的疲劳感。到车站的路上都踏着轻快的脚步。  
+到了12月，天空变暗的时间越来越早。在Cosplay店中选择商品的时候，外面的景色已经踏入了夜晚。中濑克美感到惊讶。拉着的拉杆箱传来沉甸甸的感觉。今天买的东西全都塞了进去，箱子都很明显地涨了起来。尽管如此，能够和因为Cosplay而互相认识的朋友们一起买东西，假期过得很充实。爽快的疲劳感。到车站的路上都踏着轻快的脚步。  
 “吹雪酱，快要跳着小步了吖~”  
 “啊，你明白？因为今天买了好多东西，很开心哦~满足满足！”  
 “多亏了吹雪酱，真由喜也愉快地购物了哦~谢谢你来陪我。”  
 “为了真由喜，这可是小事一桩呢！”  
 吹雪一边回答，一边朝着真由理抱了上去，但是被真由理轻巧地避开了。真由理虽然看上去呆呆的，但其实运动神经很好。  
-顺带一提，“吹雪”是中濑克美的cosplay名。  
-中濑克美是高二学生。和同年的真由理对比起来，更加男孩子气和运动风。如果出男装cos的话，围绕她的摄影师当中，比起男性，女性反而会更多。  
+顺带一提，“吹雪”是中濑克美的Cosplay名。  
+中濑克美是高二学生。和同年的真由理对比起来，更加男孩子气和运动风。如果出男装Cos的话，围绕她的摄影师当中，比起男性，女性反而会更多。  
 “这样一来，冬季CM就没什么要担心的了。”  
 
 ![](../pics/019.png)
 
-这一天，包含吹雪在内的朋友四人，为了购买制作cosplay服装用到的材料，去了池袋的汤川屋、乙女路和东京HANDS，而后又到秋叶原去逛了几家cosplay商店。这全都是为了年末的冬季CM（*Comic Market*）做的最后准备。  
+这一天，包含吹雪在内的朋友四人，为了购买制作Cosplay服装用到的材料，去了池袋的汤川屋、乙女路和东京HANDS，而后又到秋叶原去逛了几家Cosplay商店。这全都是为了年末的冬季CM（*Comic Market*）做的最后准备。  
 “虽然这样说，但是制作服饰的不就几乎只有真由理吗？  
 &emsp;&emsp; 不要太勉强哦，真由理酱……”  
-充满担心地说着话的，是枫。本名是来岛枫，直接用本名当作cosplay名，是比吹雪大三岁的女子大学生。虽然枫很有女人味，三围也是像平面模特一样完美的标准值，但性格却有些内向。大学里，不管多少次邀请她参加选美比赛，她都是以“现充一样的活动好像很可怕”这种理由去拒绝。尽管如此，和吹雪她们一起参加CM之类的活动上的cosplay，还是十分期待的。  
+充满担心地说着话的，是枫。本名是来岛枫，直接用本名当作Cosplay名，是比吹雪大三岁的女子大学生。虽然枫很有女人味，三围也是像平面模特一样完美的标准值，但性格却有些内向。大学里，不管多少次邀请她参加选美比赛，她都是以“现充一样的活动好像很可怕”这种理由去拒绝。尽管如此，和吹雪她们一起参加CM之类的活动上的Cosplay，还是十分期待的。  
 
 ![](../pics/020.png)
 
 “这样的话，趁这个机会，大家来帮真由理酱一起做服装吧？”  
 阿万音由季提出了这样的建议。  
-五官端正，整体上都被和善气氛所包围着的女性，从同性的吹雪看来也是很美丽的人。翠绿直率的眼神，闪烁着的不是普通美女的桀骜不驯，而是让人感到亲切的光芒。阿万音由季是明路大学四年级学生，和枫属于同一个社团，在四人当中年纪最大。曾经一度因为要专心找工作而从cosplay隐退，但仅仅半年就耐不住性子，复活了之前的兴趣。之后，和吹雪她们一起行动的机会也增加了。  
+五官端正，整体上都被和善气氛所包围着的女性，从同性的吹雪看来也是很美丽的人。翠绿直率的眼神，闪烁着的不是普通美女的桀骜不驯，而是让人感到亲切的光芒。阿万音由季是明路大学四年级学生，和枫属于同一个社团，在四人当中年纪最大。曾经一度因为要专心找工作而从Cosplay隐退，但仅仅半年就耐不住性子，复活了之前的兴趣。之后，和吹雪她们一起行动的机会也增加了。  
 
 ![](../pics/021.png)
 
@@ -94,7 +94,7 @@
 吹雪：“唔……把我和那个Hentai（变态）绅士当作一类，我受到打击了。”  
 由季：“话说，真由理酱也会一起穿的吧，圣诞老人的衣服。”  
 真由理：“欸？”  
-由季：“欸个什么！这么可爱，多cos点吧。”  
+由季：“欸个什么！这么可爱，多Cos点吧。”  
 真由理：“但是，真由喜是专门负责制作的……”  
 吹雪：“我有异议！那样的话太浪费了的说！”  
 真由理：“真是的，连吹雪酱都……”  
@@ -155,7 +155,7 @@
 &emsp;&emsp; 桶子君呢，那个呢，对于由季可是萌得很呢！  
 &emsp;&emsp; 一定是这样的，真由喜保证！  
 &emsp;&emsp; 夏季CM第一次见面的时候，就是这样的感觉不是嘛？”  
-由季和真由理的相识是在四个月前的夏季CM。吹雪和枫穿着真由理制作的cos服参加活动，在会场，一个人参加的由季被枫发现并且会合。在之后大家一起举行的庆功宴上，作为真由理的朋友的桶子也在。吹雪可是清楚地见证了，由季和桶子融洽交谈的样子。在那之后，由季和真由理、桶子成为了朋友，而她也会偶尔去两人所属的社团——LAB，未来机械研究所。也就是说从夏季CM以来，由季和桶子一直都保持着来往。尽管这样，由季还是苦笑着摇着头。  
+由季和真由理的相识是在四个月前的夏季CM。吹雪和枫穿着真由理制作的Cos服参加活动，在会场，一个人参加的由季被枫发现并且会合。在之后大家一起举行的庆功宴上，作为真由理的朋友的桶子也在。吹雪可是清楚地见证了，由季和桶子融洽交谈的样子。在那之后，由季和真由理、桶子成为了朋友，而她也会偶尔去两人所属的社团——LAB，未来机械研究所。也就是说从夏季CM以来，由季和桶子一直都保持着来往。尽管这样，由季还是苦笑着摇着头。  
 “不，只要看看就知道了。总是感觉不止为何在被避开。  
 &emsp;&emsp; 所以圣诞派对，我也考虑我是不是不去会比较好。”  
 真由理：“啊……呜……”    
@@ -192,7 +192,7 @@
 结果吹雪一直到车站前都黏着真由理。虽然心灵完全地被治愈了，但是抓住想要逃跑的真由理还是相当的消耗体力的。正在吹雪心满意足地喘着气时，和自己意志无关的影像突然出现在脑内——那是真由理正在跌落下地铁站台的影像，而不远处地铁正尖啸着冲过来——这让吹雪吓了一跳，重新看向真由理。  
 “……呐，真由喜。”  
 “嗯？怎么啦？”  
-“冬季CM，一起cos吧？”  
+“冬季CM，一起Cos吧？”  
 “啊哈，之前说过的吧，冬季CM的话真由喜是要专注于制作方面。”  
 “就算这样也无所谓，总之冬季CM也绝对要我们四人一起参加哟！呐？”  
 “这是当然的啦~今天就是为了这个大家才一起出来买东西的嘛。”  
