--- a/steins_gate_0/docs/0012.md
+++ b/steins_gate_0/docs/0012.md
@@ -140,7 +140,7 @@
 “是这样啊……”  
 桥田至的妹妹——并无他人，就是指铃羽。在铃羽刚开始在LAB定居的时候，由季已经和真由理、桶子有来往了，到这里来的机会也增加了。这样的话，就很难不碰面……迫不得已，铃羽才说自己是桶子的妹妹——桥田铃羽。虽说如此，为了不露馅还是尽量不碰面会比较安全。所以铃羽现在才像这样悄悄隐蔽起来。  
 “啊，对了对了，这件衣服怎么样？之前才买的。”  
-由季完全没有察觉到隐藏起来的铃羽存在的迹象。为了让桶子看看自己的衣服，像时装秀一样在房间里转了一圈。不愧是cosplayer，想向各种人展示自己的时装——由季也有这种意识这件事，还是铃羽从真由理那里听来的。  
+由季完全没有察觉到隐藏起来的铃羽存在的迹象。为了让桶子看看自己的衣服，像时装秀一样在房间里转了一圈。不愧是Cosplayer，想向各种人展示自己的时装——由季也有这种意识这件事，还是铃羽从真由理那里听来的。  
 “嗯！很好！非常好！”  
 “真的吗？”  
 “唔哈，天使ktkr！这样的感觉。”  
