--- a/steins_gate_0/docs/0018.md
+++ b/steins_gate_0/docs/0018.md
@@ -21,7 +21,7 @@
 “你好。”  
 另一位长发的少女也轻轻地向我问好。  
 “啊，你们是，真由理的朋友。”  
-她们靠近之后我终于认出，她们是和真由理一起cosplay的朋友。名字的话，只知道cosplay名，貌似是……吹雪和枫。哪一个是吹雪，哪一个是枫呢？  
+她们靠近之后我终于认出，她们是和真由理一起Cosplay的朋友。名字的话，只知道Cosplay名，貌似是……吹雪和枫。哪一个是吹雪，哪一个是枫呢？  
 “没事吧？看起来身体不太好的样子……”  
 长发的少女温柔地关心着我。我连忙表示没事。如果在这里让她们担心，去联系了真由理的话，那之后的解释弥补真是太麻烦了。不想让真由理为没必要的事担心。真是一开始就不应该回秋叶原，只是在街上走走就会碰到认识的人。刚刚从神社出来就应该向神田方向走的。  
 “冈伦总是看起来很痛苦的样子。”  
