--- a/steins_gate_0/docs/0024.md
+++ b/steins_gate_0/docs/0024.md
@@ -21,7 +21,7 @@
 绹：“在，在等……你！”  
 吹雪：“来啊，琉华君也是~”  
 琉华：“欸欸？！我并不是女……”  
-枫：“琉华君也在cosplay哟~”  
+枫：“琉华君也在Cosplay哟~”  
 琉华：“不，不好意思！马上脱下来！现在马上就脱下来……！”  
 由季：“啊啦，真是可惜，明明这么合身的。”  
 “真是热闹啊……”  
@@ -48,7 +48,7 @@
 “我？用不着为我操心。能够像这样一个人做研究，是很轻松的。  
 &emsp;&emsp; 毕竟不用为人际关系而烦恼。”  
 “这样啊。”  
-红莉栖也说过类似的话呢。红莉栖……吗？  
+红莉栖也说过类似的话呢。红莉栖……  
 “比起这些，快点进入正题吧！”  
 对了，我今天特意来找比屋定，可并不是为了聊家常的。  
 “刚才你说过想和‘红莉栖’道歉，为此才来到这里，对吧？”  
