--- a/steins_gate_0/docs/0026.md
+++ b/steins_gate_0/docs/0026.md
@@ -67,7 +67,7 @@
 “让他穿上毛茸茸的驯鹿布偶装也不错呀~再戴上红鼻子。”  
 “哎？那个……会怎样呢？”  
 喂喂，居然想让把教授装成驯鹿……  
-“这个，真由理？不要觉得每个人都有cosplay的兴趣比较好哦。”  
+“这个，真由理？不要觉得每个人都有Cosplay的兴趣比较好哦。”  
 “啊，嗯，是的呢，勉强别人是不好的呢~”  
 “不过最近，便利店一类的地方，店员们也都穿成圣诞老人了哦。  
 &emsp;&emsp; CM和圣诞节，性质完全不同呢。”  
