--- a/steins_gate_0/docs/0035.md
+++ b/steins_gate_0/docs/0035.md
@@ -7,7 +7,7 @@
 ![](../pics/052.png)
 
 “唔……”（x2）  
-在入口的铁门上挂着的告示板让我们不禁稍微停顿了脚步。走进一看，不大的店面里确实摆满了cosplay服装。距入口不远的墙角上是“新番角”和“人气cosplay角”，那里展示着五颜六色的cos用假发、缎带、珠宝饰物一类的小道具。对面的墙上则是“二手服装角”，还有袜子、学生鞋、高跟鞋、长筒皮靴之类的鞋子专卖角。再往里走，能看到那里陈列着死库水和竞技泳衣之类的东西。看来是家女性用cosplay服装店，但氛围怎么看也不是女孩子会轻易进来的。毕竟其它层也都是些“有限公司 灵神的水滴”、“宇宙电波接收器贩卖处”、“花瓣影像企划”之类的奇怪名字的店铺。  
+在入口的铁门上挂着的告示板让我们不禁稍微停顿了脚步。走进一看，不大的店面里确实摆满了Cosplay服装。距入口不远的墙角上是“新番角”和“人气Cosplay角”，那里展示着五颜六色的Cos用假发、缎带、珠宝饰物一类的小道具。对面的墙上则是“二手服装角”，还有袜子、学生鞋、高跟鞋、长筒皮靴之类的鞋子专卖角。再往里走，能看到那里陈列着死库水和竞技泳衣之类的东西。看来是家女性用Cosplay服装店，但氛围怎么看也不是女孩子会轻易进来的。毕竟其它层也都是些“有限公司 灵神的水滴”、“宇宙电波接收器贩卖处”、“花瓣影像企划”之类的奇怪名字的店铺。  
 “比屋定小姐来过这里吗？”  
 “不，之前见面是在别的杂居大楼。虽然也是一家可疑的店就是了。”  
 “是，是吗……”  
@@ -25,7 +25,7 @@
 “先不说这个，桶子，你是从哪儿出来的？”  
 待在收银台的男子什么都没说，也就代表，对方已经知道并且同意桶子待在这里了。  
 “总之先来这边。”  
-桶子走进店铺深处，挪开一个挂着大量偶像系cosplay服装的衣架，带我们穿过里侧挂着的帘布。帘布后面有大约一平米左右的空间，墙上有一扇写着“STAFF ONLY”的门。如果不挪开衣架的话完全不可能注意到啊。我吃惊得说不出话，比屋定也感叹这里简直就是忍者屋舍。  
+桶子走进店铺深处，挪开一个挂着大量偶像系Cosplay服装的衣架，带我们穿过里侧挂着的帘布。帘布后面有大约一平米左右的空间，墙上有一扇写着“STAFF ONLY”的门。如果不挪开衣架的话完全不可能注意到啊。我吃惊得说不出话，比屋定也感叹这里简直就是忍者屋舍。  
 打开门后，是一个挤得要命的办公室。不，这个房间原本应该还是很大的。也有太过昏暗的原因吧，有种很大的压迫感，甚至让人呼吸困难。四张满是金属支架的桌上乱堆着各种各样的电脑和周边设备；不知道是不是垃圾的盒子和塑料袋扔得遍地都是；杂志、游戏、塑料模型以及手办的盒子像塔一样堆积着；桌上也是乱七八糟，和LAB的情况一模一样。虽然装饰用的手办因为太暗看不清，想必也是积满了灰。说起来真的需要六台显示屏吗？每一个显示屏上都是显示着不同角度的店内的样子，看来是监视器的影像。从这个店的规模和客流量来看，三个监视器都显得多。  
 
 ![](../pics/054.png)
