--- a/steins_gate_0/docs/0036.md
+++ b/steins_gate_0/docs/0036.md
@@ -53,7 +53,7 @@
 “告诉他你今天会先躲到安全的地方就好了。和教授见面的话可能会牵连到他。”  
 对于我的话，比屋定露出微妙的表情点了点头。  
 
-比屋定被冈部带到了菲莉丝·喵喵的家，坐落于秋叶原中心的某个高层大厦的最顶层，比起cosplay商店的老式建筑，安全性肯定是上升了几个档次。菲莉丝愉快地招待了二人，并提供了床铺和食物。而桥田至为了和铃羽碰面，一个人回了未来道具研究所。  
+比屋定被冈部带到了菲莉丝·喵喵的家，坐落于秋叶原中心的某个高层大厦的最顶层，比起Cosplay商店的老式建筑，安全性肯定是上升了几个档次。菲莉丝愉快地招待了二人，并提供了床铺和食物。而桥田至为了和铃羽碰面，一个人回了未来道具研究所。  
 “这个笔记本电脑，只是存在本身就会招来灾祸，舍弃它可能比较好。”  
 状况稳定下来之后，冈部开始讨论起关于处理红莉栖的笔记本电脑和硬盘的问题。他的意见十分坚定。虽然平常的他都是那种会呆在某处，不愿太过强调自身主张的类型。但是对于这件事他却显得十分顽固。但是，比屋定也是一样的顽固。  
 “我想至少应该解锁之后确认下里面的内容吧。虽说以现况看来这个还做不到……”  
