--- a/steins_gate_0/docs/0023.md
+++ b/steins_gate_0/docs/0023.md
@@ -109,7 +109,7 @@
 “在我知道的范围里面……没有。”  
 “那，先把名字放在一边，和真由喜关系特别好的女性朋友都有哪些呢？”  
 “嗯，这样的话……应该是有一个从小学到中学一直都在一起玩的社团里的人来着——”  
-把那个名字告诉了桶子。高中以后的，就不用再特意说了，我知道的桶子应该也是清楚的。关系特别好的，就是cosplay社团的吹雪、枫还有由季，还有就是，和菲利斯一起的 *MayQueen+Nyan²* 的女孩子们。再有的话，虽然不是女孩子，但是琉华应该也能算是关系比较亲密的朋友了吧。  
+把那个名字告诉了桶子。高中以后的，就不用再特意说了，我知道的桶子应该也是清楚的。关系特别好的，就是Cosplay社团的吹雪、枫还有由季，还有就是，和菲利斯一起的 *MayQueen+Nyan²* 的女孩子们。再有的话，虽然不是女孩子，但是琉华应该也能算是关系比较亲密的朋友了吧。  
 “——我能够回答出来的就是这种程度了。和你知道的内容是差不多的。抱歉啊。”  
 “不，就算是这样也很充分了。帮大忙了。”  
 桶子拿出手机，把我说出来的名字都记到备忘录里。  
