--- a/steins_gate_0/docs/0045.md
+++ b/steins_gate_0/docs/0045.md
@@ -1,6 +1,6 @@
 > <big> **私秘境里的圣痕 - 09** </big>  
 > 1.129954  
-> [ 2011/07/ ] 确认雷斯吉宁STRATFO身份。  
+> [ 2011/07/06 ] 确认雷斯吉宁STRATFO身份。  
 
 伴随着喉咙中涌动的疼痛醒来。  
 “咳，咳咳……”  
