--- a/steins_gate_0/docs/0046.md
+++ b/steins_gate_0/docs/0046.md
@@ -1,188 +1,154 @@
 > <big> **私秘境里的圣痕 - 10** </big>  
 > 1.129954  
-> [ 2011/07/ 真帆视角（上） ] 真帆洗脑状态负面爆发。朦胧确认对冈伦好感；为了伤害真由理告知其α世界线情报；对“红莉栖”表达了嫉妒的负面情感。  
+> [ 2011/07/06 真帆视角（上） ] 真帆洗脑状态负面爆发。朦胧确认对冈伦好感；为了伤害真由理告知其α世界线情报；对“红莉栖”表达了嫉妒的负面情感。  
 
-头，好痛。
-真帆为了忍耐那撕裂般的疼痛，蹲下来抱住头、紧闭双眼、咬住嘴唇。
-一直都能听见那扰人的噪音。
-那个噪音让头痛更严重了。
-真帆不管怎样塞住耳朵，都无法让声音消失。
-因为太痛苦了不禁要叫出声音来了，但是想到那样的话只会让头痛更加恶化，只能一味的忍耐。
-噪音里混杂着话语。
-是雷斯吉宁教授的声音
-听好了，Maho。不管你用什么手段，都要揭开Rintaro·Okabe藏着的秘密。
-不然的话，就不得不杀掉他。你不希望事情变成那样吧？
-你不也相当地看好Rintaro吗。
-我和‘Kurisu’可是做了不少煽风点火的事呢，就算你没有那方面的打算，也会慢慢变成那样的。这就是人的心理。
-就算从帮助他的角度讲，也希望能引出他持有的情报
-如果那样的话，无条件的让Rintaro进入我们的研究室也可以。
-Maho，了解到的关于他的事，全部报告给我。
-他的未来掌握在你的手里，这么说也行。
-非常令人不快的话和噪音。
-真帆到现在也没理解那个声音到底在说什么。
-虽然那个话语作为声音的确传入了脑袋，但是大脑拒绝将之作为语言提取出其中的意义。
-但是反正，就算听懂了也没用。
-真帆对冈部伦太郎做出了很过分的事情。
-把他出卖给了雷斯吉宁教授和STRATFO。
-越有那个自觉，真帆的罪恶感越重。
-想现在就从这个世界上消失——。
-真帆小姐……？
-…………
-人们你来我往，初夏的秋叶原。
-蹲靠着其中一个遮阳的楼墩的真帆，听到叫自己名字的少女的声音而抬起了脸。
-果然是真帆。
-真由……理？
-在意料之外的时间，被意料之外的人搭话，真帆陷入了困惑。只是呆呆的看着真由理的脸。
-身体不舒服吗？
-…………
-没关系哦…….
-那个……
-看到冈伦了吗？
-诶？
-真帆吃了一惊。
-被这个无垢的少女问道，意识到了自己做的事情的愚蠢，卑鄙和污秽。
-为……什么……
-反问的声音，在颤抖。
-冈伦从昨天开始就联系不上…….
-也没有回家，也不接电话，也不回复短信和RINE……
-虽然桶子说过分操心了……但总感觉心里不安……
-所以今天从学校早退，一直在这附近找他。
-虽然才七月份，但是已经很高的气温了。
-这样的大热天，在秋叶原一直毫无线索地奔走着找他吗？
-椎名真由理这个少女，是个心地善良纯洁的女孩子。那就是真帆从前一直持有的印象。
-不知道污秽，绝对不会做出背叛他人、嫉妒他人，被他人利用之类的事的那样楚楚可怜的少女。
-想知道……？
-诶？
-真帆的一句话，让真由理探出了身体。
-真帆知道有什么关于冈部的事情吗？
-如果知道的话请告诉我！
-拜托了！
-深深的低下了头。
-（这样啊……）
-真帆意识到了，终于认识到了。
-真由理喜欢冈部伦太郎。
-唰地一下，真帆的太阳穴附近痛了起来。
-你不也相当地看好Rintaro吗。
-噪音在脑内回响。
-——干脆，向真由理吐露一切算了。
-——然后，让个纯真的少女指责我就行。
-——那样更加轻松也说不定
-真帆的心中，闪过了这个想法。
-不行，边这样想着
-边忍耐着头痛的真帆开口了。
-昨晚——深夜，我和冈部在一起。
-是..这样吗……？然后那个，现在冈伦在……
-真帆无视了真由理的问题。
-冈部昨天向我说了这样的话。
-——不行。
-在他所经历过的别的世界线里，椎名真由理，你曾死了无数次。
-……？
+头，好痛。  
+真帆为了忍耐那撕裂般的疼痛，蹲下来抱住头，紧闭双眼，咬住嘴唇。令人厌烦的噪音一直在她的脑海中响着，让她的头疼更加严重。不管怎样塞住耳朵，都无法让声音消失。因为太痛苦了忍不住要叫出声音，但是想到那样的话只会让头痛更加恶化，所以只有一味的忍耐。  
+噪音里混杂着话语，是雷斯吉宁教授的声音。  
+“听好了，*Maho*。  
+&emsp;&emsp; 不管用什么手段，都要揭开 *Rintaro·Okabe* 隐藏的秘密。  
+&emsp;&emsp; 不然的话，就不得不杀掉他。  
+&emsp;&emsp; 你不希望事情变成那样吧？  
+&emsp;&emsp; 你不是也很在意 *Rintaro* 的吗？  
+&emsp;&emsp; 毕竟我和 *‘Kurisu’* 可是做了不少煽风点火的事呢，  
+&emsp;&emsp; 就算你没有那方面的打算，也会慢慢变成那样的。  
+&emsp;&emsp; 这，就是人的心理啊。  
+&emsp;&emsp; 就算从帮助他的角度讲，也希望你能套出他持有的情报。  
+&emsp;&emsp; 那样的话，我也可以无条件让 *Rintaro* 进入我们的研究室。  
+&emsp;&emsp; *Maho*，把你了解到的关于他的事，全部报告给我。  
+&emsp;&emsp; 也可以这么说——他的未来掌握在你的手里。”  
+那些话语和噪音非常令人厌烦，真帆到现在也没理解它们到底在表达什么内容。虽然作为声音的的确确地传入了脑袋，但是大脑拒绝将之作为语言提取出其中的意义。不过，即使理解了也无济于事了。真帆已经对冈部伦太郎做出了无法挽回的事——把他出卖给了雷斯吉宁教授和STRATFO。越是意识到这一点，真帆心中的罪恶感就越重。  
+真想现在就从这个世界上消失——。  
+
+![](../pics/074.png)
+
+“真帆小姐……？”  
+“…………”  
+人来人往的秋叶原，正蹲靠在某幢大楼的阴影里的真帆听到了少女呼唤自己名字的声音而抬起了头。  
+“果然是真帆小姐呀。”  
+“真由理……小姐？”  
+在意料之外的时间，被意料之外的人搭话，真帆陷入了迷茫，只是双目无神地盯着真由理的脸。  
+“身体不舒服吗？”  
+“…………没事的……”  
+“那个……看到冈伦了吗？”  
+“欸？”  
+真帆心头一紧。面对这名纯洁无瑕的少女的问题，她更加意识到自己的所作所为是多么愚蠢、卑劣和污秽。  
+“怎么……了……”  
+反问的声音，在颤抖着。  
+“冈伦从昨天开始就联系不上……  
+&emsp;&emsp; 也没有回家，也不接电话，也不回复短信和RINE……  
+&emsp;&emsp; 虽然桶子君说我过分操心了……但心里总感觉不安……  
+&emsp;&emsp; 所以今天我从学校早退，一直在这附近找他。”  
+虽然才七月份，但是气温已经很高了。这样的大热天，一直在秋叶原毫无线索地四处追寻吗？  
+椎名真由理，是个善良又纯洁女孩子。这是真帆一直以来保持的印象。这名楚楚可怜的少女，看起来就不知道世间的污秽，绝对不会做出背叛他人、嫉妒他人、被他人利用之类的事情。  
+“想知道吗……？”  
+“欸？”  
+真帆的一句话，让真由理探出了身体。  
+“真帆小姐知道什么关于冈伦的线索吗？如果有的话请告诉我！拜托了！”  
+真由理一边说着一边深深地低头鞠躬。  
+（这样啊……）  
+真帆意识到了，下意识就明白了。  
+真由理喜欢冈部伦太郎。  
+唰地一下，真帆的太阳穴附近又痛了起来。  
+“你不是也很在意 *Rintaro* 的吗？”  
+那噪音又在脑内吵了起来。  
+——干脆，向真由理坦白一切算了。  
+——然后，让这个纯真的少女痛骂自己一顿。  
+——这样，说不定会更加轻松。  
+真帆的心中，闪过了这个想法。  
+不能这样——一边这样想着，一边忍耐着头痛的真帆开口了。  
+
+“昨晚——深夜，冈部和我在一起。”  
+“是…这样吗……？那么，冈伦现在在哪里……？”  
+真帆无视了真由理的问题。  
+“冈部昨天，对我说了这样的话。”  
+——不行。  
+“在他所经历过的别的世界里，椎名真由理，你死过无数次。”  
+“欸……？”  
 ——不能说出来。
-无论尝试几次都救不了你，你不断地死去。
-——这样的事，明明不应该说出来的。
-为了从那噩梦般的循环里逃出来——
-为了……救你——
-真帆的嘴好像被别人付身一样不断地编织出话语。
-冈部说，牺牲了红莉栖，对她见死不救。
-他对我说了这些。
-啊……
-如果做出时间机器，想要再次拯救红莉栖的话，就会返回到那个时候。
-——伤到她了。
-但是，话语，停不下来。
-冈部非常害怕那样。
-一直拼命的保护着你。
-这里，是为了守护你而牺牲了其他许多东西所选择的世界哦。
-虽然，你什么都没有被告知。
-骗人……
-那样的……
-冈伦……
-真由理受到了打击，无言以对。
-那双眼睛里，好像现在就会溢出泪水一样。
-…………
-真由理突然背过身体，垂下肩膀一个人走开了。
-就算从后面看过去，她足迹摇晃得也很明显。
-实在过于残酷的事实。被告知这些后，自我本身产生了动摇。真帆是这么认为的。
-…………
-真帆还是一副迷失自我的状态。
-所有发生过的事看上去就像罩上了迷雾一样的过滤器。
-一切都是模糊的，哪里都像梦幻一样虚无缥缈。
-如果说这是梦的话一定会轻易的相信。
-甚至自己的思考回路也一样的状态。
-刚才和真由理的对话也是，自己应该更加后悔才是，但是却只认知了伤到了她这个事实，其中不带有任何感情。
-正因如此才能在本人面前说出那些不经大脑的残酷的话。
-正想着，口袋里的手机震动了起来。
-看了下，是[Amadeus]——红莉栖打来的。
-麻痹的内心深处，被又细又小的针刺到一样，那样的心情。
-…………
-接不了
-没有接
-真帆的手指丝毫无法动弹，只是屏住呼吸看着液晶画面。
-怎么可能……去接……
-把现在自己难看的一面让红莉栖看什么的，做不到。
-就算这样，也觉得继续在这里不好。
-真帆打算去追离开的真由理。
-但是，就算来到了陆桥，也已经见不到真由理的身影了。
-车站前的行人太多，找到真有理是件很困难的事情。
-…………..
-为什么，在我的面前出现了……？
-明明如果不向我搭话的话，就不会受伤了……
-我已经，不是以前的我了啊。
-一边从陆桥上面眺望着景色，一边自言自语。
-突然，看见了桥下一个穿着很有特征的人走过来。
-明明这么热，却穿着黑色的骑手服，戴着包裹全脸的头盔，明显与周围格格不入，非常显眼。
-还以为是所谓的COSPLAY，但是周围的人不要说拍照了，反而都退避地让出道路。
-看体形的话，好像是女性。
-以真帆来看，那也算得上是身材拔群富有魅力的身体。
-那个女人就那样穿过陆桥下面离开了，从真帆所在的已经看不到了。
-——就在这么想的时候，那个人物从陆桥的楼梯上来了。
-而且笔直的朝真帆的方向走来。
-真帆就像别的行人一样慌忙的把视线低下，想赶快离开这个地方。
-但是在逃之前穿骑手服的女性就跑了过来，突然什么话也没说抓住了我的手臂。
-……!
-脸颊痛了起来。
-突然地被逮了意料之外，真帆不禁瘫倒在地。
-发生了什么吗，真帆一开始没有理解。
-摸了摸自己阵痛的脸颊后，才知道自己被这个骑手服的女性扇了个耳光。
-你伤到了妈妈了吧？
-从头盔里，传来了女性沉闷的声音。
-我要杀了你……
-因为那声音低沉又冷静，真帆反而感到了恐惧。
-虽然听‘教授’说过你的事……但是没关系。
-……你，是？
-因为女性戴着头盔，所以真帆看不到她的表情。而且护目镜也放了下来，就连眼睛也看不到。
-…………
-她没有回答真帆的提问。
-但是，女的好像注意到了什么一样，向天空望去。
-真帆也被吸引般地望向天空。
-一瞬，好像看到大楼的窗上闪过了巨大的黑影。
-是直升飞机的声音，非常地近。
-从什么时候开始听到的呢。
-完全没有注意到。
-那个时候，真帆也感觉到了周围的气氛明显地变了
-之前都自顾自行走着的周围的路人们，先是一副呆呆的样子之后马上一副畏怯的样子看向了车站。
-哪里都能听到那个是什么？或者电视剧摄影？什么的或者是CosPlay的活动？之类的话。
-车站那边发生了什么事情。
-真帆也站在这里，从陆桥的上面看着车站。
-……那是，什么？
-和周围的人感想一样，真帆也无意识的自言自语。
-车站前，停着2台好像是军用深绿色涂装的卡车。
-从卡车上面，陆续下来了穿着迷彩服，武装着的男人。
-还以为是自卫队，但是那群穿迷彩服的不是日本人。
-仿佛就不是日本一样的光景。
-在大家的远远观望之中，穿着迷彩服的家伙们消失在了胡同里。
-前面就是广播馆，真帆昨天从伦太郎那里听说了，屋顶上有时间机器。
-（难道是，STRATFO？）
-或者是俄罗斯，还也许是别的国家的军队。
-他们展开作战行动也是因为真帆把从伦太郎那里问出来的情报报告给了雷斯吉宁教授吧。
-正在这么想的时候，头又剧烈的痛了起来。
-呜…….啊……
-全部都是自己的错。
-那是什么，都是自己的错。
-明明直到刚才心里都像被蒙上了一层雾的状态，所有的东西都迷迷糊糊的。
-现在却要被押上心头的猛烈的罪恶感击溃一样。
-如果这样下去，就和伦太郎说的一样，第三次世界大战从这个秋叶原开始的话，那原因就是真帆把从伦太郎持有的情报交给了STRATFO。
-突然意识到，刚才打了真帆一巴掌说杀了你的那个穿骑手服的女人，跑下陆桥的台阶、奔向了车站的方向。
-到最后都不知道那个女人到底是谁。
+“无论尝试几次都无法拯救你，你仍旧不断地死去。”  
+——这样的事，明明不应该说出来的。  
+“为了从那噩梦般的循环里逃出来——  
+&emsp;&emsp; 为了……拯救你——”  
+好像被别人付身一样，真帆的口中不断地涌出这些话。  
+“冈部，牺牲了红莉栖什么的，对她见死不救什么的。  
+&emsp;&emsp; 他是这么对我说的。”  
+“啊……”  
+“如果制作出时间机器，想要再去拯救红莉栖的话，就会回到那个时候。”  
+——我在伤害她。  
+但是，话却止不住地继续流淌出来。  
+“冈部非常害怕会变成那样。  
+&emsp;&emsp; 一直在拼命地保护着你。  
+&emsp;&emsp; 这里，是为了守护你，而牺牲了很多其他东西所选择的世界哦。  
+&emsp;&emsp; 虽然，他应该什么都没有告诉过你吧。”  
+“这不是真的……  
+&emsp;&emsp; 那种事……  
+&emsp;&emsp; 冈伦……”  
+真由理受到了沉重的打击，什么都说不出来。那双眼睛里，泪水好像随时准备夺眶而出。紧接着，她背过身体，低落地垂着肩膀，一个人走开了。她的背影摇摇晃晃，看起来摇摇欲坠。突然被告知这些过于残酷的事实，让她甚至动摇了自身的存在意义。真帆能理解真由理现在的心境。  
+
+![](../pics/075.png)
+
+“呼…………”  
+真帆仍然处于迷失自我的状态。眼前的一切都仿佛笼罩了一层迷雾一样的滤镜，一切都是模糊的，一切都如梦幻般虚无缥缈。如果有人告诉她这里是梦境，她也一定会轻易相信。甚至自己的思考回路也是一样的状态。刚才和真由理的对话也是，自己应该更加后悔才是，但是她却只能认知到伤害了她这一事实，对此却没有渗入任何情感。正因如此，她才能毫不在乎地在本人面前说出那些残酷的话。  
+
+这时，口袋里的手机震动了起来。  
+看了下，是『Amadeus』——“红莉栖”打来的。  
+她感受到，麻痹的内心深处，好像被一根细小的针刺到了一下。  
+“…………”  
+没有接。  
+也无法接。  
+真帆的手指丝毫无法动弹，只是屏住呼吸盯着液晶屏幕。  
+“接起来……怎么可能……”  
+她做不到让“红莉栖”看到现在自己难看的一面。  
+但她也觉得继续呆在这里不好，于是打算去追离开不久的真由理。  
+可是，一路来到天桥，始终没有看见真由理的身影。车站前的行人太多，找到真有理是很困难的。  
+“呼…………  
+&emsp;&emsp; 为什么，要出现在我的面前……？  
+&emsp;&emsp; 明明如果不向我搭话的话，就不会受伤了……  
+&emsp;&emsp; 我已经，不是以前的我了啊……”  
+真帆从天桥上眺望着车站前的人群，喃喃自语着。  
+
+突然，一个衣着特别显眼的人从桥下走了过来。如此炎热的天气，那个人却穿着黑色的骑手服，戴着全罩头盔，显得与周围格格不入。她还以为是所谓的Cosplay，但是周围的人不要说拍照了，反而都退避地让出道路。看体形的话，好像是名女性。以真帆来看，那也算得上是凹凸有致富有魅力的身材。  
+那个女人就那样穿过天桥下方，离开了真帆的视线范围。  
+——就在以为她已经离开的时候，那个人却从天桥的楼梯走了上来，而且笔直地朝向真帆的方向。  
+真帆就像其他行人一样慌忙低下视线，想赶快离开这个地方。然而在真帆逃开之前，穿骑手服的女性就跑到了她的身边，一言不发地抓住了她的手臂。
+“呃……!”  
+脸颊传来一阵痛楚。还处在被抓住的惊愕状态的真帆不禁伴随着力道瘫倒在地。一开始真帆没有理解发生了什么，摸了摸自己隐隐作痛的脸颊，她才意识到自己被这个穿骑手服的女性扇了个耳光。  
+“你伤害了妈妈吧？”  
+从头盔里，传来了女性沉闷的声音。  
+“我要杀了你……”  
+那声音低沉又冷静，反而让真帆感到了恐惧。  
+“虽然‘教授’向我说过你……但是没有关系。”  
+“你……是谁？”  
+因为女性戴着头盔，所以真帆看不到她的表情。而且面罩也放了下来，就连眼睛也看不到。  
+
+![](../pics/076.png)
+
+“…………”
+对方没有回答真帆的提问。她好像注意到了什么，抬头向天空望去。真帆也顺着她的目光抬头望天。一瞬，大楼的窗户上闪过了巨大的黑影，伴随着直升机的声音，而且相当近。  
+从什么时候出现的呢。  
+完全没有注意到。  
+那个时候，真帆也感觉到周围的气氛明显发生了变化。之前自顾自行走着的路人们都愣住了，表情有点畏怯地看着车站的方向，耳边不断传来“那是什么？”或者“电视剧摄影？”或是“Cosplay的活动？”之类的议论。  
+车站那边好像发生了什么事情。真帆也站了起来，从天桥上望向车站。  
+“那是……什么？”  
+真帆的口中无意识地道出和周围人同样的疑问。  
+
+![](../pics/077.png)
+![](../pics/078.png)
+![](../pics/079.png)
+
+车站前，停着两辆好像是军用深绿色涂装的卡车。车上陆续下来了许多穿着迷彩服、全副武装的男人。本以为是自卫队，但是那群穿迷彩服的男人并非日本人。很难把这场景和日本联系起来。  
+众目睽睽之下，穿着迷彩服的那群人消失在了小巷里。那条路前方通向广播馆。而真帆昨天从冈部口中得知，那里的屋顶上有台时间机器。  
+（难道是，STRATFO？）  
+又或者是俄罗斯，还是别的国家的军队？  
+他们会展开作战行动，也是因为真帆把从冈部那里问出来的情报报告给了雷斯吉宁教授吧。  
+正在这么想的时候，头又剧烈地痛了起来。  
+“呜……咕……啊……！”  
+全都是自己的错。  
+这一切，都是自己的错。  
+明明直到刚才，心里都像被蒙上了一层雾的状态，所有东西都迷迷糊糊的，现在却要被冲上心头的猛烈的罪恶感击溃了。如果接下来，就和冈部说的一样，第三次世界大战从这个秋叶原开始爆发的话，那起因就是真帆将冈部持有的情报交给了STRATFO。  
+回过神来发现，刚才打了真帆一巴掌并威吓要杀了她的那个穿骑手服的女性，跑下了天桥，正向着车站的方向奔去。结果到最后都不知道那个女人到底是谁。  
+
 正想着，真帆的手机又开始了震动。
 是红莉栖。
 想逃避这个罪恶感。
