--- a/steins_gate_0/docs/0046.md
+++ b/steins_gate_0/docs/0046.md
@@ -1,11 +1,11 @@
 > <big> **私秘境里的圣痕 - 10** </big>  
-> 1.129954  
-> [ 2011/07/06 真帆视角（上） ] 真帆洗脑状态负面爆发。朦胧确认对冈伦好感；为了伤害真由理告知其α世界线情报；对“红莉栖”表达了嫉妒的负面情感。  
+> 1.143688  
+> [ 2011/07/07 真帆视角（上） ] 真帆洗脑状态负面爆发。朦胧确认对冈伦好感；为了伤害真由理告知其α世界线情报；秋叶原车站出现外国军队；篝出现，疑似认识真帆。  
 
 头，好痛。  
 真帆为了忍耐那撕裂般的疼痛，蹲下来抱住头，紧闭双眼，咬住嘴唇。令人厌烦的噪音一直在她的脑海中响着，让她的头疼更加严重。不管怎样塞住耳朵，都无法让声音消失。因为太痛苦了忍不住要叫出声音，但是想到那样的话只会让头痛更加恶化，所以只有一味的忍耐。  
 噪音里混杂着话语，是雷斯吉宁教授的声音。  
-“听好了，*Maho*。  
+『听好了，*Maho*。  
 &emsp;&emsp; 不管用什么手段，都要揭开 *Rintaro·Okabe* 隐藏的秘密。  
 &emsp;&emsp; 不然的话，就不得不杀掉他。  
 &emsp;&emsp; 你不希望事情变成那样吧？  
@@ -16,7 +16,7 @@
 &emsp;&emsp; 就算从帮助他的角度讲，也希望你能套出他持有的情报。  
 &emsp;&emsp; 那样的话，我也可以无条件让 *Rintaro* 进入我们的研究室。  
 &emsp;&emsp; *Maho*，把你了解到的关于他的事，全部报告给我。  
-&emsp;&emsp; 也可以这么说——他的未来掌握在你的手里。”  
+&emsp;&emsp; 也可以这么说——他的未来掌握在你的手里。』  
 那些话语和噪音非常令人厌烦，真帆到现在也没理解它们到底在表达什么内容。虽然作为声音的的确确地传入了脑袋，但是大脑拒绝将之作为语言提取出其中的意义。不过，即使理解了也无济于事了。真帆已经对冈部伦太郎做出了无法挽回的事——把他出卖给了雷斯吉宁教授和STRATFO。越是意识到这一点，真帆心中的罪恶感就越重。  
 真想现在就从这个世界上消失——。  
 
@@ -50,7 +50,7 @@
 真帆意识到了，下意识就明白了。  
 真由理喜欢冈部伦太郎。  
 唰地一下，真帆的太阳穴附近又痛了起来。  
-“你不是也很在意 *Rintaro* 的吗？”  
+『你不是也很在意 *Rintaro* 的吗？』  
 那噪音又在脑内吵了起来。  
 ——干脆，向真由理坦白一切算了。  
 ——然后，让这个纯真的少女痛骂自己一顿。  
@@ -148,52 +148,6 @@
 这一切，都是自己的错。  
 明明直到刚才，心里都像被蒙上了一层雾的状态，所有东西都迷迷糊糊的，现在却要被冲上心头的猛烈的罪恶感击溃了。如果接下来，就和冈部说的一样，第三次世界大战从这个秋叶原开始爆发的话，那起因就是真帆将冈部持有的情报交给了STRATFO。  
 回过神来发现，刚才打了真帆一巴掌并威吓要杀了她的那个穿骑手服的女性，跑下了天桥，正向着车站的方向奔去。结果到最后都不知道那个女人到底是谁。  
-
-正想着，真帆的手机又开始了震动。
-是红莉栖。
-想逃避这个罪恶感。
-虽然刚才无视了，但这次接通了。
-前辈！
-红莉栖……
-……没关系吗？
-你指什么？
-到底，怎么回事？
-什么事也没有
-可是……你不是在哭吗？
-……！
-被指出后，才注意到泪水正从自己的眼里溢出来。
-心里的迷雾已经完全消失，之后只留下罪恶感和后悔和难受还有头痛折磨着真帆的心。
-因为头……很痛。
-他的未来掌握在你的手里，这么说也行
-又听到了噪音。
-冈部呢？冈部怎么了？
-冈部，怎么样都行吧。
-不是打算杀掉他吗！我看到了哦！
-不要理我的事情……
-我不能那么做。
-别管我啊！
-比不过……你
-不管我付出多少，都比不过红莉栖你
-呐……红莉栖。
-我一直尊敬着你。虽然比我年纪小，但是我觉得你是了不起的科学家哦……
-但是我的心底却是这么想的啊……
-为什么在我面前出现了呢？
-为什么你不早出现10年呢？
-为什么你不晚出现10年呢？
-如果你不在的话，我应该会过着更平凡的日子的。
-明明可以不被这种丑陋的感情所支配也可以的……！
-我总是被你破坏常识！
-即使死了，我也被你的事纠缠着……
-明明想从心底悼念你的逝去……但是做不到。
-你一直作为无法跨越的障碍矗立在那里……
-自尊心和逞强心妨碍着我。
-那里被趁虚而入，我，甚至被最信赖的人背叛……以至于，背叛了信赖我的朋友……
-我的脑子里，已经乱成一团了啊……
-所以，不要管我的事情啊……
-前辈……
-太过于情绪化了，虽然这是平时的自己所无法想象的言行，但是真帆怎么样也抑制不了。
-……！
-
 
 
 <br/>
